<resources>
    <string name="app_name">Paho Client</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="qos_options">
        <item name="qos_0">0</item>
        <item name="qos_1">1</item>
        <item name="qos_2">2</item>
    </string-array>



    <string name="action_add_connection">Add Connection</string>
    <string name="add_connection_general_label">General</string>
    <string name="add_connection_client_id_label">Client ID</string>
    <string name="add_connection_client_id_default">AndroidClient</string>
    <string name="add_connection_server_label">Server</string>
    <string name="add_connection_server_default">iot.eclipse.org</string>
     <string name="add_connection_port_label">Port</string>
    <string name="add_connection_clean_session_label">Clean Session</string>
    <string name="add_connection_advanced_label">Advanced</string>
    <string name="add_connection_username_label">Username</string>
    <string name="add_connection_password_label">Password</string>
    <string name="add_connection_timeout_label">Timeout</string>
    <string name="add_connection_keepalive_label">Keepalive</string>
    <string name="add_connection_tls_server_key_label">Server TLS Key</string>
    <string name="add_connection_tls_client_key_label">Client TLS Key</string>
    <string name="add_connection_lwt_label">Last Will &amp; Testament</string>
    <string name="add_connection_lwt_topic_label">Topic</string>
    <string name="add_connection_lwt_message_label">Message</string>
    <string name="add_connection_lwt_retain_label">Retain</string>
    <string name="add_connection_lwt_qos_label">QoS</string>
    <string name="hello_world">Hello world!</string>

    <string name="connection_connected_to">Connected to</string>
    <string name="connection_disconnected_from">Disconnected from</string>
    <string name="connection_unknown_status">Unknown connection status to</string>
    <string name="connection_connecting_to">Connecting to</string>
    <string name="connection_disconnecting_from">Disconnecting from</string>
    <string name="connection_error_connecting_to">An error occurred connecting to</string>
    <string name="connection_clear">Clear</string>
    <string name="subscription_new">New Subscription</string>


    <string name="manage_title">Manage Connection</string>
    <string name="manage_delete">Delete Connection</string>
    <string name="manage_edit">Edit Connection</string>

    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>

    <!-- Strings that need formatting  -->
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="connection_lost">%1$s has lost connection to %2$s</string>

    <!-- Strings for Subscriptions Fragment -->
    <string name="topic_label">Topic</string>
    <string name="qos_label">QoS</string>
    <string name="notify_label">Show Notifications</string>
    <string name="subscribe_ok">OK</string>
    <string name="subscribe_cancel">Cancel</string>
    <string name="qos_text" >QoS: %1$d</string>
    <string name="notify_text">Notifications: %1$s</string>



    <!-- Strings for Help Fragment -->
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="help_paho">Paho</string>
    <string name="help_title">Eclipse Paho Android Example Utility</string>
    <string name="help_email_button">Get Help or send Feedback</string>
    <string name="help_paho_website">Go to the Paho Website</string>
    <string name="help_enable_logging">Enable Paho Logging</string>


    <!-- Home Fragment -->
    <string name="home_no_connections">No Connections</string>
    <string name="home_no_cons_message">It looks like there are no connections defined yet.</string>


    <!-- messages -->
    <string name="message_time">Time:</string>
    <string name="message_time_fmt">Time: %1$s</string>
    <string name="publish">Publish</string>
    <string name="start_publish">Start Publish</string>
    <string name="stop_publish">Stop Publish</string>
    <string name="publish_timestamp">Publish data</string>
    <string name="stop_publish_timestamp">stop Publish data</string>
    <string name="time_interval_text">time interval</string>
    <string name="time_interval_ms">ms</string>
    <string name="motion_sensor_label">Motion Sensor</string>
    <string name="default_time_interval">100</string>
    <string name="msg_count">message count</string>
    <string name="topic_fmt">Topic: %1$s</string>


    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>


    <!-- placeholders -->
    <string name="placeholder_main_label">Main Label</string>
    <string name="placeholder_sub_label">Sub Label</string>
    <string name="placeholder_example">Example application</string>


    <!-- Message List Item -->
    <string name="message_topic">Topic: </string>

    <!-- strings for motion sensor -->
    <string name="label_acc_sample">Accelerometer</string>
    <string name="label_gyro_sample">Gyro</string>
    <string name="label_magnet_sample">Magnetometer</string>



</resources>
