<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.eclipse.paho.android.sample.activity.MessagesFragment"
    android:layout_marginTop="56dp">


    <LinearLayout
        android:id="@+id/topic_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spinnerTextFieldLabel"
            android:text="@string/add_connection_lwt_topic_label"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:lines="1"
            android:id="@+id/topic"/>

    </LinearLayout>


    <View
        android:id="@+id/divider8"
        style="@style/Divider"
        android:layout_below="@+id/topic_group" />




    <LinearLayout
        android:id="@+id/lwt_qos_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider8">

        <TextView
            android:id="@+id/lwt_qos_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spinnerTextFieldLabel"
            android:text="@string/add_connection_lwt_qos_label"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qos_spinner"/>
    </LinearLayout>

    <View
        android:id="@+id/divider10"
        style="@style/Divider"
        android:layout_below="@+id/lwt_qos_group" />

    <Switch
        android:text="@string/add_connection_lwt_retain_label"
        android:id="@+id/retain_switch"
        android:layout_below="@+id/divider10"
        style="@style/Switch"
        android:checked="false" />



    <LinearLayout
        android:id="@+id/time_interval_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retain_switch"
        android:gravity="center">

        <TextView
            android:id="@+id/time_interval_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spinnerTextFieldLabel"
            android:text="@string/time_interval_text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:lines="1"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/time_interval"
            android:gravity="center"
            android:text="@string/default_time_interval"
            />

        <TextView
            android:id="@+id/time_interval_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spinnerTextFieldLabel"
            android:text="@string/time_interval_ms"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/connect_group"
        android:layout_below="@id/time_interval_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/motion_sensor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spinnerTextFieldLabel"
            android:text="@string/motion_sensor_label"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect"
            android:id="@+id/connectButton"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_publish"
        android:id="@+id/publish_button"
        android:layout_below="@+id/connect_group"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_count"
        android:id="@+id/msg_count_button"
        android:clickable="false"
        android:layout_below="@+id/publish_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>


    <Switch xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_acc_sample"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/acc_control"
        android:layout_below="@+id/msg_count_button"
        android:checked="false" />

    <Switch xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_gyro_sample"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/gyro_control"
        android:layout_below="@+id/acc_control"
        android:checked="false" />

    <Switch xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_magnet_sample"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/magnet_control"
        android:layout_below="@+id/gyro_control"
        android:checked="false" />




</RelativeLayout>